--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -3,18 +3,35 @@
     border: 0;
     box-sizing: border-box;
 }
-.listanavbar{
-    background-color: rgb(29, 84, 84);
-    list-style-type: none;
-    display: flex;
-    justify-content: space-around;
-}
-.lilista{    
-    text-transform: uppercase;
-    font-size: 4rem;
-}
-.btn{
-    color: rgb(68, 140, 140);
-    font-size: 2rem;
 
+.padre{
+    background-color: rgb(1, 3, 3);
+    h1{
+        display: flex;
+        justify-content: center;
+        text-transform: uppercase;
+        font-weight: 7rem;
+        color: rgb(144, 174, 199);
+        letter-spacing: 0.8rem;
+    }
+}
+.carwidget{
+    display: flex;
+    justify-content: right;
+    padding-right: 0.5rem;
+}
+
+.nav-link{
+    display: flex;
+    justify-content:space-between;
+    align-items: center;
+    font-weight:600;
+    font-size: 1rem;
+
+
+
+}
+.container-fluid{
+
+    background-color: rgb(124, 126, 126);
 }
