--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -6,7 +6,7 @@
 
 .padre{
     background-color: rgb(1, 3, 3);
-    h1{
+    .h1{
         display: flex;
         justify-content: center;
         text-transform: uppercase;
@@ -20,18 +20,41 @@
     justify-content: right;
     padding-right: 0.5rem;
 }
-
-.nav-link{
+.navbar{
+    width: 100%;
+    height: 80px;
     display: flex;
-    justify-content:space-between;
     align-items: center;
-    font-weight:600;
-    font-size: 1rem;
-
-
-
+    background-color: rgb(37, 37, 37);
 }
-.container-fluid{
-
-    background-color: rgb(124, 126, 126);
+.navbar .categories{
+    width: 33.3%;
+    height: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
+
+.categories .category{
+list-style: none;
+}
+
+
+
+
+
+/* .nav-link{
+    display: flex;
+    justify-content: space-between;
+    list-style-type: none;
+    text-decoration: none;
+    text-transform: uppercase;
+}
+nav{
+
+    padding: 1rem;
+}
+ul.li.category{
+    justify-content: space-between;
+
+} */
